# dolphin_theme

./: README.md  dolphin_ExportShipmentLot_AddBlocks_ClientScript.js  pyproject.toml
dolphin_theme/: api.py  api_arrivals.py  bi_import.py  blocks_api.py  hooks.py  modules.txt  template_generator.py
dolphin_theme/dolphin_theme/: __init__.py
dolphin_theme/dolphin_theme/page/dolphin_blocks/: dolphin_blocks.js  dolphin_blocks.json
dolphin_theme/dolphin_theme/page/dolphin_port/: dolphin_port.js  dolphin_port.json
dolphin_theme/dolphin_theme/page/dolphin_reconcile/: __init__.py  dolphin_reconcile.js  dolphin_reconcile.json
dolphin_theme/dolphin_theme/page/dolphin_stock/: dolphin_stock.js  dolphin_stock.json
dolphin_theme/dolphin_theme/public/js/: dolphin_theme.js
dolphin_theme/public/css/: dolphin_theme.bundle.css  dolphin_theme.css
dolphin_theme/public/dashboard/: dolphin_stock.html
dolphin_theme/public/js/: dolphin_new_bi.bundle.js  dolphin_theme.bundle.js
dolphin_theme/public/templates/: Buyer_Inspection_Import_Template.xlsx  Quarry_Block_Import_Template.xlsx  Quarry_Inspection_Import_Template.xlsx
dolphin_theme/www/: block-summary.html  blocks-at-port.html  blocks-hub.html  dc-fullview.html  dolphin-arrivals.html  dolphin-arrivals.py  dolphin-import.html  dolphin_manifest.json  dolphin_sw.js  m.html  measurement-variations.html  overview.html  port-reconciliation.html  production-stock.html  sales-calc.html  stock-reports.html  trace-block.html
www/: sales-calc.html
